@@ -17,7 +17,6 @@
  */
 package VASSAL.counters;
 
-import VASSAL.tools.ProblemDialog;
 import java.awt.Color;
 import java.awt.Component;
 import java.awt.Dimension;
@@ -26,15 +25,11 @@ import java.awt.Point;
 import java.awt.Rectangle;
 import java.awt.Shape;
 import java.awt.event.ActionEvent;
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileReader;
-import java.io.FileWriter;
 import java.io.IOException;
-import java.io.Reader;
 import java.io.Writer;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -84,7 +79,7 @@ import VASSAL.tools.ScrollPane;
 import VASSAL.tools.SequenceEncoder;
 import VASSAL.tools.WriteErrorDialog;
 import VASSAL.tools.filechooser.FileChooser;
-import VASSAL.tools.io.IOUtils;
+import VASSAL.tools.ProblemDialog;
 
 /**
  * A collection of pieces that behaves like a deck, i.e.: Doesn't move.
@@ -92,11 +87,11 @@ import VASSAL.tools.io.IOUtils;
  */
 public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   public static final String ID = "deck;"; //$NON-NLS-1$
-  public static final String ALWAYS = "Always";
-  public static final String NEVER = "Never";
-  public static final String USE_MENU = "Via right-click Menu";
-  public static final String NO_USER = "nobody"; // Dummy user ID for turning
-  protected static StackMetrics deckStackMetrics = new StackMetrics(false, 2, 2, 2, 2);
+  public static final String ALWAYS = "Always"; // NON-NLS
+  public static final String NEVER = "Never"; // NON-NLS
+  public static final String USE_MENU = "Via right-click Menu"; // NON-NLS
+  public static final String NO_USER = "nobody"; // Dummy user ID for turning // NON-NLS
+  protected static final StackMetrics deckStackMetrics = new StackMetrics(false, 2, 2, 2, 2);
   // cards face down
 
   protected boolean drawOutline = true;
@@ -147,23 +142,34 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   protected PropertyExpression restrictExpression = new PropertyExpression();
   protected PropertySource propertySource;
 
+  /**
+   * Special {@link CommandEncoder} to handle loading/saving Decks from files.
+   */
   protected CommandEncoder commandEncoder = new CommandEncoder() {
+    /**
+     * Deserializes a Deck loaded from a file, turning it into a LoadDeckCommand.
+     * @param command String contents of deck
+     * @return {@link LoadDeckCommand} to put the specified contents in the deck
+     */
     @Override
     public Command decode(String command) {
-      Command c = null;
-      if (command.startsWith(LoadDeckCommand.PREFIX)) {
-        c = new LoadDeckCommand(Deck.this);
+      if (!command.startsWith(LoadDeckCommand.PREFIX)) {
+        return null;
       }
-      return c;
+      return new LoadDeckCommand(Deck.this);
     }
 
+    /**
+     * Serializes a LoadDeckCommand
+     * @param c LoadDeckCommand
+     * @return string form of command
+     */
     @Override
     public String encode(Command c) {
-      String s = null;
-      if (c instanceof LoadDeckCommand) {
-        s = LoadDeckCommand.PREFIX;
+      if (!(c instanceof LoadDeckCommand)) {
+        return null;
       }
-      return s;
+      return LoadDeckCommand.PREFIX;
     }
   };
 
@@ -197,54 +203,93 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     ProblemDialog.showDeprecated("2020-08-06");
   }
 
+  /**
+   * Create an empty deck
+   * @param gameModule The game module
+   */
   public Deck(GameModule gameModule) {
     this(gameModule, ID);
   }
 
+  /**
+   * Creates an empty deck using specified type information
+   * @param gameModule The game module
+   * @param type Type information for the deck (the configuration information that does not change during the game)
+   */
   public Deck(GameModule gameModule, String type) {
     this.gameModule = gameModule;
     mySetType(type);
     gameModule.addSideChangeListenerToPlayerRoster(this);
   }
 
+  /**
+   * Creates an empty deck using specified type information
+   * @param gameModule The game module
+   * @param type Type information for the deck (the configuration information that does not change during the game)
+   * @param source PropertySource
+   */
   public Deck(GameModule gameModule, String type, PropertySource source) {
     this(gameModule, type);
     propertySource = source;
   }
 
+  /**
+   * Sets the Deck's property source
+   * @param source PropertySource
+   */
   public void setPropertySource(PropertySource source) {
     propertySource = source;
     if (globalCommands != null) {
-      for (DeckGlobalKeyCommand globalCommand : globalCommands) {
+      for (final DeckGlobalKeyCommand globalCommand : globalCommands) {
         globalCommand.setPropertySource(propertySource);
       }
     }
   }
 
+  /**
+   * Listener for when the local player changes side. Updates all of our counts of expressions of pieces configured to be counted.
+   * @param oldSide local player's old side
+   * @param newSide local player's new side
+   */
   @Override
   public void sideChanged(String oldSide, String newSide) {
     updateCountsAll();
   }
 
+  /**
+   * Adds a Deck Global Key Command (DGKC).
+   * @param globalCommand The command to add
+   */
   public void addGlobalKeyCommand(DeckGlobalKeyCommand globalCommand) {
     globalCommands.add(globalCommand);
   }
 
+  /**
+   * Removes a Deck Global Key Command (DGKC).
+   * @param globalCommand The command to remove
+   */
   public void removeGlobalKeyCommand(DeckGlobalKeyCommand globalCommand) {
     globalCommands.remove(globalCommand);
   }
 
+  /**
+   * @return A list of Deck Global Key Commands for this deck, serialized by their encoder.
+   */
   protected String[] getGlobalCommands() {
-    String[] commands = new String[globalCommands.size()];
+    final String[] commands = new String[globalCommands.size()];
     for (int i = 0; i < globalCommands.size(); i++) {
       commands[i] = globalCommands.get(i).encode();
     }
     return commands;
   }
 
+  /**
+   * Sets the list of Deck Global Key Commands for this deck
+   * @param commands The list of commands to set (in serialized string form)
+   */
   protected void setGlobalCommands(String[] commands) {
     globalCommands = new ArrayList<>(commands.length);
-    for (String command : commands) {
+    for (final String command : commands) {
       globalCommands.add(new DeckGlobalKeyCommand(command, propertySource));
     }
   }
@@ -268,14 +313,15 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   }
 
   /**
-  * Update map-level count property for a piece located at index
-  */
+   * Update map-level count property for a piece located at index
+   * @param index Index (within the Deck, counting from the top) of the piece whose count to update
+   */
   private void updateCounts(int index) {
     if (!doesExpressionCounting()) {
       return;
     }
     if (index >= 0 && index < getPieceCount()) {
-      GamePiece p = getPieceAt(index);
+      final GamePiece p = getPieceAt(index);
       if (p == null) {
         //can't figure out the piece, do a full update
         updateCountsAll();
@@ -291,20 +337,22 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   }
 
   /**
-  * Update map-level count property for a piece
-  */
+   * Update map-level count property for a piece
+   * @param p Game piece to update counts for
+   * @param increase if true, increase the count; if false, decrease.
+   */
   private void updateCounts(GamePiece p, boolean increase) {
     if (!doesExpressionCounting() || getMap() == null) {
       return;
     }
     //test all the expressions for this deck
     for (int index = 0; index < countExpressions.length; index++) {
-      MutableProperty.Impl prop = expressionProperties.get(index);
-      FormattedString formatted =
+      final MutableProperty.Impl prop = expressionProperties.get(index);
+      final FormattedString formatted =
         new FormattedString(countExpressions[index].getExpression());
-      PieceFilter f = PropertiesPieceFilter.parse(formatted.getText());
+      final PieceFilter f = PropertiesPieceFilter.parse(formatted.getText());
       if (f.accept(p)) {
-        String mapProperty = prop.getPropertyValue();
+        final String mapProperty = prop.getPropertyValue();
         if (mapProperty != null) {
           int newValue = Integer.decode(mapProperty);
           if (increase) {
@@ -326,6 +374,11 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     countProperty.setPropertyValue(String.valueOf(pieceCount));
   }
 
+  /**
+   * Inserts a piece into a specific position into the Deck (counting down from the top)
+   * @param p Piece to insert
+   * @param index "How many cards down into the Deck" to put it.
+   */
   @Override
   protected void insertPieceAt(GamePiece p, int index) {
     super.insertPieceAt(p, index);
@@ -333,9 +386,13 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     fireNumCardsProperty();
   }
 
+  /**
+   * Removes a piece from a specific location in the deck
+   * @param index Piece to remove, counting down from the top
+   */
   @Override
   protected void removePieceAt(int index) {
-    int startCount = pieceCount;
+    final int startCount = pieceCount;
     updateCounts(index);
     super.removePieceAt(index);
     fireNumCardsProperty();
@@ -344,6 +401,9 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     }
   }
 
+  /**
+   * Removes all pieces from the Deck.
+   */
   @Override
   public void removeAll() {
     super.removeAll();
@@ -351,12 +411,16 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     fireNumCardsProperty();
   }
 
+  /**
+   * Sets the Map this Deck appears on
+   * @param map Map to assign Deck to
+   */
   @Override
   public void setMap(Map map) {
     if (map != getMap()) {
       countProperty.removeFromContainer();
       if (map != null) countProperty.addTo(map);
-      for (MutableProperty.Impl prop : expressionProperties) {
+      for (final MutableProperty.Impl prop : expressionProperties) {
         prop.removeFromContainer();
         if (map != null) prop.addTo(map);
       }
@@ -366,8 +430,16 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     fireNumCardsProperty();
   }
 
+  /** Sets the information for this Deck.  See {@link Decorator#myGetType}
+   *  @param type a serialized configuration string to
+   *              set the "type information" of this Deck, which is
+   *              information that doesn't change during the course of
+   *              a single game (e.g. Image Files, Context Menu strings,
+   *              etc, rules about when deck is shuffled, whether it is
+   *              face-up or face down, etc).
+   */
   protected void mySetType(String type) {
-    SequenceEncoder.Decoder st = new SequenceEncoder.Decoder(type, ';');
+    final SequenceEncoder.Decoder st = new SequenceEncoder.Decoder(type, ';');
     st.nextToken();
     drawOutline = st.nextBoolean(true);
     outlineColor = ColorConfigurer.stringToColor(st.nextToken("0,0,0")); //$NON-NLS-1$
@@ -380,7 +452,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     reshuffleCommand = st.nextToken(""); //$NON-NLS-1$
     reshuffleTarget = st.nextToken(""); //$NON-NLS-1$
     reshuffleMsgFormat = st.nextToken(""); //$NON-NLS-1$
-    setDeckName(st.nextToken("Deck"));
+    setDeckName(st.nextToken(Resources.getString("Deck.deck")));
     shuffleMsgFormat = st.nextToken(""); //$NON-NLS-1$
     reverseMsgFormat = st.nextToken(""); //$NON-NLS-1$
     faceDownMsgFormat = st.nextToken(""); //$NON-NLS-1$
@@ -490,7 +562,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   }
 
   public String[] getCountExpressions() {
-    String[] fullstrings = new String[countExpressions.length];
+    final String[] fullstrings = new String[countExpressions.length];
     for (int index = 0; index < countExpressions.length; index++) {
       fullstrings[index] = countExpressions[index].getFullString();
     }
@@ -578,10 +650,10 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   }
 
   public void setCountExpressions(String[] countExpressionsString) {
-    CountExpression[] c = new CountExpression[countExpressionsString.length];
+    final CountExpression[] c = new CountExpression[countExpressionsString.length];
     int goodExpressionCount = 0;
     for (int index = 0; index < countExpressionsString.length; index++) {
-      CountExpression n = new CountExpression(countExpressionsString[index]);
+      final CountExpression n = new CountExpression(countExpressionsString[index]);
       if (n.getName() != null) {
         c[index] = n;
         goodExpressionCount++;
@@ -621,7 +693,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     else {
       deckName = n;
     }
-    countProperty.setPropertyName(deckName + "_numPieces");
+    countProperty.setPropertyName(deckName + "_numPieces"); // NON-NLS
     for (int i = 0; i < countExpressions.length; ++i) {
       expressionProperties.get(i).setPropertyName(
         deckName + "_" + countExpressions[i].getName());
@@ -785,6 +857,19 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     return setContents(l).append(reportCommand(shuffleMsgFormat, Resources.getString("Deck.shuffle"))); //$NON-NLS-1$
   }
 
+  /** Shuffle the contents of the Deck, IF it is an always-shuffle, and we're about to ask for a random list from it */
+  public Command maybeShuffle() {
+    if (!ALWAYS.equals(shuffleOption)) {
+      return new NullCommand();
+    }
+    final GamePiece[] a = new GamePiece[pieceCount];
+    System.arraycopy(contents, 0, a, 0, pieceCount);
+    final List<GamePiece> l = Arrays.asList(a);
+    DragBuffer.getBuffer().clear();
+    Collections.shuffle(l, gameModule.getRNG());
+    return setContents(l);
+  }
+
   /**
    * Return an iterator of pieces to be drawn from the Deck. Normally, a random
    * piece will be drawn, but if the Deck supports it, the user may have
@@ -792,7 +877,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
    * with the next draw.
    */
   public PieceIterator drawCards() {
-    Iterator<GamePiece> it;
+    final Iterator<GamePiece> it;
     if (nextDraw != null) {
       it = nextDraw.iterator();
     }
@@ -811,7 +896,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
 
         final Random rng = gameModule.getRNG();
 
-        while (count-- > 0 && indices.size() > 0) {
+        while (count-- > 0 && !indices.isEmpty()) {
           final int i = rng.nextInt(indices.size());
           final int index = indices.get(i);
           indices.remove(i);
@@ -830,7 +915,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     return new PieceIterator(it) {
       @Override
       public GamePiece nextPiece() {
-        GamePiece p = super.nextPiece();
+        final GamePiece p = super.nextPiece();
         /*
          * Bug 12951 results in Cards going back into a Deck via Undo in an inconsistent state.
          * This statement is the culprit. As far as I can tell, it is not needed as Deck.pieceRemoved()
@@ -853,9 +938,9 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
 
   /** Set the contents of this Deck to a Collection of GamePieces */
   protected Command setContents(Collection<GamePiece> c) {
-    ChangeTracker track = new ChangeTracker(this);
+    final ChangeTracker track = new ChangeTracker(this);
     removeAll();
-    for (GamePiece child : c) {
+    for (final GamePiece child : c) {
       insertChild(child, pieceCount);
     }
     return track.getChangeCommand();
@@ -868,10 +953,10 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   @Deprecated(since = "2020-08-06", forRemoval = true)
   protected Command setContents(Iterator<GamePiece> it) {
     ProblemDialog.showDeprecated("2020-08-06");
-    ChangeTracker track = new ChangeTracker(this);
+    final ChangeTracker track = new ChangeTracker(this);
     removeAll();
     while (it.hasNext()) {
-      GamePiece child = it.next();
+      final GamePiece child = it.next();
       insertChild(child, pieceCount);
     }
     return track.getChangeCommand();
@@ -900,7 +985,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     if (!"null".equals(mapId)) { //$NON-NLS-1$
       m = Map.getMapById(mapId);
       if (m == null) {
-        ErrorDialog.dataWarning(new BadDataReport("No such map", mapId, null));
+        ErrorDialog.dataWarning(new BadDataReport("No such map", mapId, null)); // NON-NLS
       }
     }
 
@@ -931,8 +1016,8 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   }
 
   public Command setContentsFaceDown(boolean value) {
-    ChangeTracker t = new ChangeTracker(this);
-    Command c = new NullCommand();
+    final ChangeTracker t = new ChangeTracker(this);
+    final Command c = new NullCommand();
     faceDown = value;
     return t.getChangeCommand().append(c).append(reportCommand(faceDownMsgFormat, value ? Resources.getString("Deck.face_down") : Resources.getString("Deck.face_up"))); //$NON-NLS-1$ //$NON-NLS-2$
   }
@@ -940,7 +1025,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   /** Reverse the order of the contents of the Deck */
   public Command reverse() {
     final ArrayList<GamePiece> list = new ArrayList<>();
-    for (Iterator<GamePiece> i = getPiecesReverseIterator(); i.hasNext(); ) {
+    for (final Iterator<GamePiece> i = getPiecesReverseIterator(); i.hasNext(); ) {
       list.add(i.next());
     }
     return setContents(list).append(reportCommand(
@@ -974,7 +1059,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
 
   @Override
   public Command pieceRemoved(GamePiece p) {
-    ChangeTracker tracker = new ChangeTracker(p);
+    final ChangeTracker tracker = new ChangeTracker(p);
     p.setProperty(Properties.OBSCURED_TO_OTHERS, isFaceDown() && !isDrawFaceUp());
     return tracker.getChangeCommand();
   }
@@ -985,15 +1070,15 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
 
   @Override
   public void draw(java.awt.Graphics g, int x, int y, Component obs, double zoom) {
-    int count = Math.min(getPieceCount(), maxStack);
-    GamePiece top = (nextDraw != null && nextDraw.size() > 0) ?
-      nextDraw.get(0) : topPiece();
+    final int count = Math.min(getPieceCount(), maxStack);
+    final GamePiece top = (nextDraw != null && !nextDraw.isEmpty()) ?
+      nextDraw.get(0) : topPiece();  
 
     if (top != null) {
-      Object owner = top.getProperty(Properties.OBSCURED_BY);
+      final Object owner = top.getProperty(Properties.OBSCURED_BY);
       top.setProperty(Properties.OBSCURED_BY, faceDown ? NO_USER : null);
-      Color blankColor = getBlankColor();
-      Rectangle r = top.getShape().getBounds();
+      final Color blankColor = getBlankColor();
+      final Rectangle r = top.getShape().getBounds();
       r.setLocation(x + (int) (zoom * (r.x)), y + (int) (zoom * (r.y)));
       r.setSize((int) (zoom * r.width), (int) (zoom * r.height));
       for (int i = 0; i < count - 1; ++i) {
@@ -1015,7 +1100,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     }
     else {
       if (drawOutline) {
-        Rectangle r = boundingBox();
+        final Rectangle r = boundingBox();
         r.setLocation(x + (int) (zoom * r.x), y + (int) (zoom * r.y));
         r.setSize((int) (zoom * r.width), (int) (zoom * r.height));
         g.setColor(outlineColor);
@@ -1044,11 +1129,12 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
 
   @Override
   public Rectangle boundingBox() {
-    GamePiece top = topPiece();
-    Dimension d = top == null ? size : top.getShape().getBounds().getSize();
-    Rectangle r = new Rectangle(new Point(), d);
+    final GamePiece top = topPiece();
+    final Dimension d = top == null ? size : top.getShape().getBounds().getSize();
+    final Rectangle r = new Rectangle(new Point(), d);
     r.translate(-r.width / 2, -r.height / 2);
-    for (int i = 0, n = getMaximumVisiblePieceCount(); i < n; ++i) {
+    final int n = getMaximumVisiblePieceCount();
+    for (int i = 0; i < n; ++i) {
       r.y -= 2;
       r.height += 2;
       r.width += 2;
@@ -1075,7 +1161,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
 
   protected KeyCommand[] getKeyCommands() {
     if (commands == null) {
-      ArrayList<KeyCommand> l = new ArrayList<>();
+      final ArrayList<KeyCommand> l = new ArrayList<>();
       KeyCommand c;
       if (USE_MENU.equals(shuffleOption)) {
         c = new KeyCommand(shuffleCommand, getShuffleKey(), this) {
@@ -1102,7 +1188,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
         l.add(c);
       }
       if (USE_MENU.equals(faceDownOption)) {
-        KeyCommand faceDownAction = new KeyCommand(faceDown ? Resources.getString("Deck.face_up") : Resources.getString("Deck.face_down"), NamedKeyStroke.NULL_KEYSTROKE, this) { //$NON-NLS-1$ //$NON-NLS-2$
+        final KeyCommand faceDownAction = new KeyCommand(faceDown ? Resources.getString("Deck.face_up") : Resources.getString("Deck.face_down"), NamedKeyStroke.NULL_KEYSTROKE, this) { //$NON-NLS-1$ //$NON-NLS-2$
           private static final long serialVersionUID = 1L;
 
           @Override
@@ -1173,14 +1259,14 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
         l.add(c);
       }
 
-      for (DeckGlobalKeyCommand cmd : globalCommands) {
+      for (final DeckGlobalKeyCommand cmd : globalCommands) {
         l.add(cmd.getKeyCommand(this));
       }
 
       commands = l.toArray(new KeyCommand[0]);
     }
 
-    for (KeyCommand command : commands) {
+    for (final KeyCommand command : commands) {
       if (Resources.getString("Deck.face_up").equals(command.getValue(Action.NAME)) && !faceDown) { //$NON-NLS-1$
         command.putValue(Action.NAME, Resources.getString("Deck.face_down")); //$NON-NLS-1$
       }
@@ -1196,10 +1282,10 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
    */
   protected Command reportCommand(String format, String commandName) {
     Command c = null;
-    FormattedString reportFormat = new FormattedString(format);
+    final FormattedString reportFormat = new FormattedString(format);
     reportFormat.setProperty(DrawPile.DECK_NAME, getLocalizedDeckName());
     reportFormat.setProperty(DrawPile.COMMAND_NAME, commandName);
-    String rep = reportFormat.getLocalizedText();
+    final String rep = reportFormat.getLocalizedText();
     if (rep.length() > 0) {
       c = new Chatter.DisplayText(gameModule.getChatter(), "* " + rep); //$NON-NLS-1$
       c.execute();
@@ -1255,10 +1341,12 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
         return -otherProperty.compareTo(myProperty);
       }
 
+      @Override
       public String toString() {
         return selectDisplayProperty.getText(piece);
       }
 
+      @Override
       public boolean equals(Object o) {
         if (! (o instanceof AvailablePiece)) return false;
         return ((AvailablePiece)o).piece.equals(piece);
@@ -1279,13 +1367,13 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     d.add(new ScrollPane(list));
     d.add(new JLabel(Resources.getString("Deck.select_cards"))); //$NON-NLS-1$
     d.add(new JLabel(Resources.getString("Deck.then_click"))); //$NON-NLS-1$
-    Box box = Box.createHorizontalBox();
+    final Box box = Box.createHorizontalBox();
     JButton b = new JButton(Resources.getString(Resources.OK));
     b.addActionListener(e -> {
-      int[] selection = list.getSelectedIndices();
+      final int[] selection = list.getSelectedIndices();
       if (selection.length > 0) {
         nextDraw = new ArrayList<>();
-        for (int value : selection) {
+        for (final int value : selection) {
           nextDraw.add(pieces[value].piece);
         }
       }
@@ -1311,7 +1399,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   public Command sendToDeck() {
     Command c = null;
     nextDraw = null;
-    DrawPile target = DrawPile.findDrawPile(reshuffleTarget);
+    final DrawPile target = DrawPile.findDrawPile(reshuffleTarget);
     if (target != null) {
       if (reshuffleMsgFormat.length() > 0) {
         c = reportCommand(reshuffleMsgFormat, reshuffleCommand);
@@ -1323,7 +1411,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
         c = new NullCommand();
       }
       // move cards to deck
-      int cnt = getPieceCount() - 1;
+      final int cnt = getPieceCount() - 1;
       for (int i = cnt; i >= 0; i--) {
         c.append(target.addToContents(getPieceAt(i)));
       }
@@ -1346,11 +1434,11 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   }
 
   private File getSaveFileName() {
-    FileChooser fc = gameModule.getFileChooser();
-    File sf = fc.getSelectedFile();
+    final FileChooser fc = gameModule.getFileChooser();
+    final File sf = fc.getSelectedFile();
     if (sf != null) {
       String name = sf.getPath();
-      int index = name.lastIndexOf('.');
+      final int index = name.lastIndexOf('.');
       if (index > 0) {
         name = name.substring(0, index) + ".sav"; //$NON-NLS-1$
         fc.setSelectedFile(new File(name));
@@ -1400,21 +1488,20 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
 
   public void saveDeck(File f) throws IOException {
     Command comm = new LoadDeckCommand(null);
-    for (GamePiece p : asList()) {
+    for (final GamePiece p : asList()) {
       p.setMap(null);
       comm = comm.append(new AddPiece(p));
     }
 
-    try (Writer fw = new FileWriter(f, StandardCharsets.UTF_8);
-         BufferedWriter out = new BufferedWriter(fw)) {
+    try (Writer w = Files.newBufferedWriter(f.toPath(), StandardCharsets.UTF_8)) {
       gameModule.addCommandEncoder(commandEncoder);
-      out.write(gameModule.encode(comm));
+      w.write(gameModule.encode(comm));
       gameModule.removeCommandEncoder(commandEncoder);
     }
   }
 
   private File getLoadFileName() {
-    FileChooser fc = gameModule.getFileChooser();
+    final FileChooser fc = gameModule.getFileChooser();
     fc.selectDotSavFile();
     if (fc.showOpenDialog(map.getView()) != FileChooser.APPROVE_OPTION)
       return null;
@@ -1443,12 +1530,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
   }
 
   public Command loadDeck(File f) throws IOException {
-    String ds;
-
-    try (Reader fr = new FileReader(f, StandardCharsets.UTF_8);
-         BufferedReader in = new BufferedReader(fr)) {
-      ds = IOUtils.toString(in);
-    }
+    final String ds = Files.readString(f.toPath(), StandardCharsets.UTF_8);
 
     gameModule.addCommandEncoder(commandEncoder);
     Command c = gameModule.decode(ds);
@@ -1464,7 +1546,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
       c.execute();
       final Command[] sub = c.getSubCommands();
       c = new NullCommand();
-      for (Command command : sub) {
+      for (final Command command : sub) {
         c.append(command);
       }
       c.append(t.getChangeCommand());
@@ -1496,10 +1578,10 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     @Override
     protected void executeCommand() {
       target.removeAll();
-      Command[] sub = getSubCommands();
-      for (Command command : sub) {
+      final Command[] sub = getSubCommands();
+      for (final Command command : sub) {
         if (command instanceof AddPiece) {
-          GamePiece p = ((AddPiece) command).getTarget();
+          final GamePiece p = ((AddPiece) command).getTarget();
           // We set the id to null so that the piece will get a new id
           // when the AddPiece command executes
           p.setId(null);
@@ -1526,7 +1608,7 @@ public class Deck extends Stack implements PlayerRoster.SideChangeListener {
     private String name;
     private String expression;
     public CountExpression(String expressionString) {
-      String[] split = expressionString.split("\\s*:\\s*", 2); //$NON-NLS-1$
+      final String[] split = expressionString.split("\\s*:\\s*", 2); //$NON-NLS-1$
       if (split.length == 2) {
         name       = split[0];
         expression = split[1];
